css/styles.css
body {
	position: relative;
}

header.controls {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	z-index: 10;
}

#logo {
	background-image: url("../images/logo.png");
	background-size: contain;
	background-position: center;
	background-repeat: no-repeat; 
	width: 50%;
	float: left;
	height: 100px; 
}

.section-controller {
	box-sizing: border-box;
	width: 25%;
	vertical-align: bottom;
	padding-top: 10px;
}

.section-controller a {
	color: inherit;
	text-decoration: none;
	cursor: pointer;
}

#left-section-controller {
	float: left;
	padding-left: 10px;
}

#right-section-controller {
	float: right;
	text-align: right;
	padding-right: 10px;
}

section {
	position: absolute;
	height: 100%;
	width: 100%;
	background-color: green;
	z-index: 100;

	transition-duration: 0.5s;
	transition-timing-function: ease-out;
}

section#left-section {
	left: -100%;
	transition-property: left;
}

section#left-section.open {
	left: 0;
}

section#right-section {
	right: -100%;
}
section#right-section.open {
	right: 0;
}

